# ada_description

./: .travis.yml  README.md  package.xml  process_xacros.bash
ada_description/robots_urdf/: ada_with_camera_forque.urdf  ada_with_forque.urdf  ada_with_realsense_camera.srdf  ada_with_realsense_camera.urdf
jaco/: process_xacros.bash
jaco/robots/: camera.xacro  forque.xacro  j2n6s200.xacro  j2n6s200_standalone.xacro  kinova_common.xacro  kinova_finger_set.xacro
jaco/urdf/: ada.srdf  (+6 more)
meshes/: camera_joule.dae  camera_joule_tex.STL  camera_joule_tex.dae  collision_camera_joule.dae  collision_camera_joule_tex.dae  collision_forque_kinova.dae  collision_hand_3finger.dae  nano_all.dae  nano_coll.dae
mujoco/: ada_stl.urdf  collision_arm.STL  collision_base.STL  collision_finger_distal.STL  collision_finger_proximal.STL  collision_forearm.STL  collision_hand_2finger.STL  collision_shoulder.STL  collision_wrist.STL
robots/: README.txt  ada.srdf  ada.urdf  ada_accessories.srdf  ada_accessories.urdf  ada_srdf.xacro  ada_urdf.xacro  ada_with_camera.srdf  ada_with_camera_forque.srdf  ada_with_camera_forque.urdf  camera.xacro  forque.xacro  gazebo_full.xacro  gen3.xacro  gen3_robotiq_2f_85.xacro  j2n6s200.xacro  j2n6s200_standalone.xacro  kinova_common.xacro  kinova_finger_set.xacro  kinova_inertial.xacro  kortex_robot.xacro
robots_urdf/: ada.urdf  ada_gazebo.urdf  ada_with_camera.srdf  ada_with_camera.urdf  ada_with_camera_forque.srdf  ada_with_camera_forque.urdf  ada_with_forque.urdf  vis_ada_with_camera.urdf
urdf/: ada.srdf  ada.urdf
worlds/: README.md  ada.world
(+19 files in other folders)
