<?xml version="1.0"?>
<package>
  <name>ada_description</name>
  <version>2.0.0</version>
  <description>Models for UW-ADA components</description>

  <maintainer email="tapo@uw.edu">Tapomayukh Bhattacharjee</maintainer>

  <license>TODO</license>

  <author email="xyz@uw.edu">XYZ</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <run_depend>urdf</run_depend>
  <build_depend>transmission_interface</build_depend> 
  <run_depend>transmission_interface</run_depend> 

  <export>
  </export>
</package>
